<resources>
    <string name="app_name">Baking App</string>
    <string name="recipe_list_header">Recipes</string>
    <string name="error_message">No recipes found.</string>
    <string name="recipe_details_title">Recipe Details</string>
    <string name="ingredients_list_title">Ingredients</string>
    <string name="step_activity_title">Recipe Steps</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>

    <!-- Strings for baking app widget -->
    <string name="widget_id">App Widget ID\u0020</string>
    <string name="URL">Tap to launch URL</string>
    <string name="appwidget_text">Bake It Up</string>
    <string name="widget_ingredients_title">Ingredients</string>
    <string name="add_widget">Add widget</string>

    <string name="placeholder_image">Placeholder Image</string>

    <string name="recipe_icon">Recipe Icon</string>

    <string name="kilogram_icon">Kilogram Icon</string>

    <string name="checked_icon">Checked Icon</string>

    <!-- Strings for dialog box -->

    <string name="no_internet_connection">Sorry! No internet connection.</string>

    <string name="close_button_x">Close button x.</string>

    <string name="exit">Exit</string>

    <string name="retry">Retry</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->

    <string name="settings_order_by_label">Order By</string>

    <string name="settings_order_by_key" translatable="false">order_by</string>

    <string name="settings_order_by_default" translatable="false">Default Setting Here</string>

    <!-- Strings for Video Fragment -->

    <string name="video_player" translatable="false">Video Player</string>

</resources>
