<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_clickable_area">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/widget_background">

        <LinearLayout
            android:background="@drawable/tvbackground"
            style="@style/widget_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appwidget_text"
                style="@style/widget_text" />

            <ImageView
                android:id="@+id/ivWidgetRecipeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/recipe_icon"
                android:src="@drawable/food" />

            <TextView
                android:id="@+id/widget_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_ingredients_title"
                style="@style/widget_text" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
